[package]
name = "mame_launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
native-dialog = "0.7.0"
once_cell = "1.19.0"
open = "5.1.4"
packbytes = "0.2.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.10.4"
rodio = "0.18.1"
serde = { version = "1.0.203", features = ["derive"] }
serialport = "4.3.0"
slint = "1.8.0"
strum = "0.26.2"
strum_macros = "0.26.4"
sysinfo = "0.30.12"
toml = "0.8.14"
which = "6.0.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
libxdo-sys = "0.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"
winresource = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = { version = "0.24", features = ["elcapitan"] }
objc2 = { version = "0.5", features = ["relax-void-encoding"] }
foreign-types-shared = "0.3"

[package.metadata.bundle]
name = "WebTV MAME Launcher"
identifier = "pm.emac.mame_launcher"
icon = ["ui/images/icon.png"]
copyright = "Unlicensed"

[build-dependencies]
slint-build = "1.8.0"
